<resources>
    <string name="name">Easy NoteBook</string>
    <string name="t_name">Enter title</string>
    <string name="add_note">Enter memo</string>
    <string name="title">My Notes</string>
    <string name="save">Save</string>
    <string name="empty">Add your notes</string>
    <string name="f_toast">You must fill all fields</string>
    <string name="save_t">Saved</string>
    <string name="message_reinstall_app">If you forget your passcode, you\'ll need to reinstall the app</string>
    <string name="re_enter_passcode">Re-enter your passcode</string>
    <string name="add_new_passcode">Enter new passcode</string>
    <string name="enter_any_4_digits">Please enter any 4 digits that you will use to unlock your Easy Notebook app</string>
    <string name="create_a_password">Create a passcode</string>
    <string name="passcodes_don_t_match_please_try_again">Passcodes don\'t match. Please try again</string>
    <string name="enter_your_passcode">Enter your Easy NoteBook passcode</string>
    <string name="incorrect_passcode">Passcode is incorrect!</string>
    <string name="passcode_lock">Passcode Lock</string>
    <string name="delete_passcode">Delete passcode</string>
    <string name="delete_passcode_successful">Passcode deleted successfully</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sure_delete_passcode">Are you sure you want to delete the Easy NoteBook passcode?</string>
    <string name="_0" translatable="false">0</string>
    <string name="_9" translatable="false">9</string>
    <string name="_8" translatable="false">8</string>
    <string name="_7" translatable="false">7</string>
    <string name="_6" translatable="false">6</string>
    <string name="_5" translatable="false">5</string>
    <string name="_4" translatable="false">4</string>
    <string name="_3" translatable="false">3</string>
    <string name="_2" translatable="false">2</string>
    <string name="_1" translatable="false">1</string>
    <string name="clear_field" translatable="false">Clear field</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="ok">OK</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Note</string>
    <string name="support_the_app">Support the app</string>
    <string name="enjoying_the_app">Enjoying the app?</string>
    <string name="if_you_like_it">If you like it, please take a moment to rate us on Google Play. It helps a lot.</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="later">Later</string>
    <string name="no_thanks">No, thanks</string>
</resources>