<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/note_book_color_main_fon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="62dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_lock"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/im_password" />


        <TextView
            android:id="@+id/tvLockedCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:text="@string/enter_your_passcode"
            android:textColor="@color/easy_notebook_background" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:inputType="numberPassword"
            android:letterSpacing="0.3"
            android:maxLength="4"
            android:textColor="@color/easy_notebook_background"
            android:textSize="34sp"
            tools:ignore="TextViewEdits"
            tools:text="1234" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="16dp"
            android:background="#C3737373" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_1"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/btn_2"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/btn_3"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_4"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/btn_5"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/btn_6"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/btn_8"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/btn_9"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:text="@string/_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/dot_btn"
                style="@style/ActionButton"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/btn_0"
                style="@style/ActionButton"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/_0" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/delete_btn"
                style="@style/ActionButton"
                android:layout_margin="10dp"
                android:contentDescription="@string/clear_field"
                android:src="@drawable/ic_backspace" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>