<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/note_book_color_main_fon">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddNote"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/note_book_color_main_fon"
        android:elevation="4dp"
        android:contentDescription="@string/default_web_client_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back"
        app:title="@string/new_note"
        app:titleTextColor="@color/easy_notebook_background" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints="username"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="fill_horizontal"
        android:hint="@string/add_note"
        android:inputType="textMultiLine|textCapSentences"
        android:paddingHorizontal="10dp"
        android:paddingTop="5dp"
        android:scrollbars="vertical"
        android:textColor="@color/easy_notebook_background"
        android:textColorHint="@color/grey_fon"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        tools:ignore="LabelFor" />

    <FrameLayout
        android:id="@+id/btnSaveNote"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/easy_notebook_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/save"
            android:textColor="@color/note_book_color_main_fon"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <View
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_fon"
        app:layout_constraintBottom_toBottomOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:backgroundTint="@android:color/transparent"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/t_name"
        android:inputType="textCapSentences"
        android:maxLength="38"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:textColor="@color/easy_notebook_background"
        android:textColorHint="@color/grey_fon"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbAddNote" />


</androidx.constraintlayout.widget.ConstraintLayout>