<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/note_book_color_main_fon">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbDeletePasscode"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/easy_notebook_background"
            android:elevation="4dp"
            app:menu="@menu/menu_passcode_delete"
            android:contentDescription="@string/default_web_client_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back"
            app:title="@string/passcode_lock"
            app:titleTextColor="@color/note_book_color_main_fon" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/im_password"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbMain" />

        <TextView
            android:id="@+id/tvTitlePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/create_a_password"
            android:textColor="@color/easy_notebook_background"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/titleSubPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/enter_any_4_digits"
            android:textColor="@color/easy_notebook_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/llPasscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpty">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_otp_1"
                style="@style/OtpInput"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_otp_2"
                style="@style/OtpInput"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_otp_3"
                style="@style/OtpInput"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_otp_4"
                style="@style/OtpInput"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNotEqualsPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/passcodes_don_t_match_please_try_again"
            android:textColor="@color/easy_notebook_background"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
            tools:ignore="TextContrastCheck"
            tools:visibility="visible" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>